[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Willie Fleming" <willief@gmail.com>]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository ="https://github.com/willief/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"